syntax = "proto3";

package proto;
option go_package = "likes/proto";

message Profile {
    int64 ID = 1; // tg user id, mention [inline mention of a user](tg://user?id=123456789)
    string name = 2;
    int32 age = 3;
    string description = 4;
    string location = 5;
}

service ProfileService{
    rpc Like (TargetRequest) returns (ErrorResponse);

    rpc GetLikes (IdRequest) returns (LikesResponse);
}


message TargetRequest {
    int64 id = 1;
    int64 tgtId = 2;
}

message IdRequest {
    int64 id = 1;
}

message ErrorResponse {
    string error_message = 1;
}

message LikesResponse {
    repeated Profile likes = 1;
}